<resources>
    <string name="app_name">Translate</string>

    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_sign_up">sign up</string>
    <string name="home_enter_the_text">Enter the text</string>
    <string name="home_translation">Translation</string>
    <string name="home_swap_languages">swap languages</string>
    <string name="home_erase_text">erase text</string>
    <string name="home_translate">translate</string>
    <string name="home_save_translation">Save translation</string>
    <string name="home_copy_result">Copy result</string>
    <string name="home_on_click_copy">Copied to clipboard</string>
    <string name="home_translate_from">Translate from language</string>
    <string name="home_translate_to">Translate to language</string>

    <string name="list_saved">Saved</string>
    <string name="list_avatar">Avatar</string>
    <string name="list_sign_out">Sign out</string>

    <string name="quiz_confirm">confirm</string>
    <string name="quiz_quiz">Quiz</string>
    <string name="quiz_translate">translate</string>
    <string name="quiz_into">into </string>
    <string name="quiz_wrong">wrong</string>
    <string name="quiz_correct">correct</string>
    <string name="quiz_language">Ukrainian</string>
    <string name="quiz_target">deceive</string>
    <string name="quiz_answer1">обмежувати</string>
    <string name="quiz_answer2">спадний</string>
    <string name="quiz_answer3">помститись</string>
    <string name="quiz_answer4">розлучатися</string>
    <string name="quiz_not_enough_words">You need more than ten saved words in one language to use this fragment</string>

    <string name="saved_item_delete_item">delete item</string>
    <string name="saved_item_textview">TextView</string>

    <string name="no_internet_connection">No internet connection</string>
</resources>