<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fl_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pitbull_black"
    tools:context=".Quiz.QuizFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/truffle_black"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/quiz_quiz"
            android:textColor="@color/pebble_gray"
            android:textSize="18sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quiz_translate"
                android:textAlignment="center"
                android:textColor="@color/pebble_gray"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvTarget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:paddingBottom="8dp"
                android:text="@string/quiz_target"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="38sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/quiz_into"
                    android:textAlignment="textEnd"
                    android:textColor="@color/pebble_gray"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tvLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/quiz_language"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBaseline_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAnswer1"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:background="@drawable/answer_button_selector"
                android:fontFamily="@font/inter"
                android:text="@string/quiz_answer1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAnswer2"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/answer_button_selector"
                android:fontFamily="@font/inter"
                android:text="@string/quiz_answer2"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAnswer3"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/answer_button_selector"
                android:fontFamily="@font/inter"
                android:text="@string/quiz_answer3"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAnswer4"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/answer_button_selector"
                android:fontFamily="@font/inter"
                android:text="@string/quiz_answer4"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/frameFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnConfirm"
                android:layout_width="155dp"
                android:layout_height="52dp"
                android:background="@drawable/confirm_button_selector"
                android:fontFamily="@font/inter"
                android:gravity="center|center_horizontal|top|center_vertical"
                android:text="@string/quiz_confirm"
                android:textColor="@color/purple_200"
                android:textSize="24sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnWrong"
                android:layout_width="155dp"
                android:layout_height="52dp"
                android:background="@drawable/wrong_button_theme"
                android:fontFamily="@font/inter"
                android:text="@string/quiz_wrong"
                android:textColor="@color/red"
                android:textSize="24sp"
                android:visibility="invisible" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCorrect"
                android:layout_width="155dp"
                android:layout_height="52dp"
                android:background="@drawable/correct_button_theme"
                android:enabled="true"
                android:fontFamily="@font/inter"
                android:text="@string/quiz_correct"
                android:textColor="@color/green"
                android:textSize="24sp"
                android:visibility="invisible" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/alert"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pitbull_black"
        android:clickable="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/pitbull_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="140dp"
            android:contentDescription="@string/quiz_not_enough_words"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_do_not_disturb_24" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/quiz_not_enough_words"
            android:textAlignment="center"
            android:textColor="@color/pebble_gray"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>